syntax = "proto3";
package fusionchain.policy;

import "google/protobuf/any.proto";

option go_package = "github.com/qredo/fusionchain/x/policy/types";

// Action wraps a message that needs to be approved by a set of approvers.
message Action {
  uint64 id = 1;
  repeated string approvers = 2;
  bool completed = 3;
  // Optional policy id that must be satisfied by the approvers.
  // If not specified, it's up to the creator of the action to decide what to
  // apply.
  uint64 policy_id = 4;
  // Original message that started the action, it will be executed when the
  // policy is satisfied.
  google.protobuf.Any msg = 5;
}
